objects/ccrz__E_Order__c.object
<CustomObject>
    <description>The E_Order__c object contains the header data of placed order.</description>
    <fields>
        <fullName>ActivationKeyAvailable__c</fullName>
        <label>ActivationKeyAvailable</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.Activation_Key_Generated__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Activation_Key_Failure_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation Key Failure Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllActivationKeysGenerated__c</fullName>
        <formula>IF( Max_Activation_Keys__c ==   ActivationKeyAvailable__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AllActivationKeysGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAMS_Merchant_Reference_Number__c</fullName>
        <label>BAMS Merchant Reference Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_BranchLocation__c</fullName>
        <label>Location Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Customer_ID__c</fullName>
        <formula>ccrz__Account__r.Customer_BMS_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Customer BMS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_OrderRefNumber__c</fullName>
        <label>BMS Order reference number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Order_Ref_Text__c</fullName>
        <formula>IF(BMS_OrderRefNumber__c&gt;0,TEXT(BMS_OrderRefNumber__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Order Ref Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Order_reference_number_Refund__c</fullName>
        <label>Order reference number Refund</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ByPassFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToByPassFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Orders (CC Order)</relationshipLabel>
        <relationshipName>CC_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Discount__c</fullName>
        <formula>Original_Order_Subtotal__c -  ccrz__SubtotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>ccrz__Contact__r.Account.BillingStreet &amp; 
ccrz__Contact__r.Account.BillingCity &amp; &quot;, &quot; &amp; 
ccrz__Contact__r.Account.BillingState &amp; &quot; &quot; &amp; 
ccrz__Contact__r.Account.BillingPostalCode &amp; 
ccrz__Contact__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>ccrz__Contact__r.FirstName +&apos; &apos;+ccrz__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Product_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check If Order Contains any DA Product group item in it.</description>
        <label>DA Product Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_SES_Product_Count__c</fullName>
        <label>DA &amp; SES Product Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.Is_FW_OrderItem__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DBU_Customer_BMS_Number__c</fullName>
        <label>DBU Customer BMS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dbu_Original_Order_Total__c</fullName>
        <label>Dbu Original Order Total</label>
        <summarizedField>ccrz__E_OrderItem__c.DBU_Original_Order_Item_Total__c</summarizedField>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_HQ_District__c</fullName>
        <label>Distributor HQ District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FW_Product_Count__c</fullName>
        <label>FW Product Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.Is_FW_OrderItem__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_Included_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Order_Date__c</fullName>
        <formula>FLOOR((  NOW() - CreatedDate)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Order Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Provision_Count__c</fullName>
        <label>IAM Provision Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.Is_IAM_Provision__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_Included_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IAM_teams_group_email__c</fullName>
        <label>IAM teams group email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>INVOICE_CODE__c</fullName>
        <label>INVOICE_CODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActivationKeyJobRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActivationKeyJobRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBatchJobRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBatchJobRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBoltCreditMemoDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoltCreditMemoDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGetOrderSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGetOrderSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInterCompanyProcessSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to check the intercompany record creation process is success or not in retry batch class.</description>
        <label>IsInterCompanyProcessSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReversalBoltJournalEntryDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReversalBoltJournalEntryDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BMS_PDF_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_BMS_PDF_Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_OMS_Revoke_and_Cancel_Not_Done_Count__c</fullName>
        <label>Is OMS Revoke and Cancel Not Done Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_OMS_Revoke_and_Cancel_Not_Done__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Refund_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Refund Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reissued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reissued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Revoked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revoked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Activation_Keys__c</fullName>
        <label>Max Activation Keys</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OMS_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimum_Subscription_length__c</fullName>
        <label>Minimum Subscription length</label>
        <summarizedField>ccrz__E_OrderItem__c.OSM_SW_SubProd_term_length__c</summarizedField>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OE_Comment__c</fullName>
        <label>OE_Comment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMSActiKey__c</fullName>
        <label>OMSActiKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSMRequestCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OSMRequestCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSMSecondaryEmail__c</fullName>
        <label>OSM Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OSM_2_mins_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM 2 mins completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_ActivationKey_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM_ActivationKey_Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_BMS_Customer_Number__c</fullName>
        <label>OSM BMS Customer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Bill_From__c</fullName>
        <label>Bill From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Customer_BMS_Number__c</fullName>
        <formula>IF(ccrz__Storefront__c =&apos;SoftwareStore&apos;,ccrz__Account__r.Customer_BMS_number__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Customer BMS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Discount_On_BMS__c</fullName>
        <label>OSM Discount On BMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSM_Discount_On_BOLT__c</fullName>
        <label>OSM Discount On BOLT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSM_Discount_On_DN__c</fullName>
        <label>OSM Discount On DN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OSM_Email_Template_Subject__c</fullName>
        <formula>IF(ISPICKVAL(ccrz__OrderStatus__c, &quot;Cancelled&quot;) &amp;&amp; CreatedById !=  OwnerId , &apos;Your Cummins Marketplace Order Cancellation:&apos;&amp;Name, (IF(ISPICKVAL(ccrz__OrderStatus__c, &quot;Cancelled&quot;) &amp;&amp; CreatedById =  OwnerId,&apos;Your Cummins Marketplace Order Cancellation:&apos;&amp; Name ,IF(ISPICKVAL(ccrz__OrderStatus__c, &quot;Order Submitted&quot;) &amp;&amp; CreatedById != Order_Cancelled_By_CSR__c,&apos;Your Cummins Marketplace Order:&apos;&amp;Name,(IF(ISPICKVAL(ccrz__OrderStatus__c, &quot;Order Submitted&quot;) &amp;&amp; CreatedById = Order_Cancelled_By_CSR__c ,&apos;Your Cummins Marketplace Order:&apos;&amp; Name,&apos;&apos;))))))</formula>
        <label>OSM_Email_Template_Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Headquarter_Email__c</fullName>
        <label>OSM Headquarter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OSM_Logged_In_User_Type__c</fullName>
        <label>OSM Logged In User Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Order_Status_Copy__c</fullName>
        <formula>TEXT(ccrz__OrderStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM_Order_Status_Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Order_Time_Elapsed__c</fullName>
        <formula>(NOW() -CreatedDate )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Order Time Elapsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_PDF_sent_in_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM PDF sent in email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Bundle_Product_Count__c</fullName>
        <label>Bundle Product Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.ccrz__ProductType__c</field>
            <operation>equals</operation>
            <value>Bundle</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Cancel_Comment__c</fullName>
        <label>Cancel Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Count_for_OMS_Product_Item__c</fullName>
        <label>Count for OMS Product Item</label>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Coupon_Count__c</fullName>
        <label>Coupon Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Coupon_Applied__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Days_Since_Order_Date__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Order Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Get_TI_Success__c</fullName>
        <formula>OSM_SW_Count_for_OMS_Product_Item__c = OSM_SW_Get_TI_success_for_OMS_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get TI Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Get_TI_success_for_OMS_Product__c</fullName>
        <label>Get TI success for OMS Product</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OMS_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_GetTI_Success__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_IAM_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_IsBoltARInvoiceDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoltARInvoiceDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_IsFSDFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFSDFailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_Bolt_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bolt PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_DA_Update_Done_Or_Not_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is DA Update Done Or Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_FSD_Done_Or_Not_Needed__c</fullName>
        <formula>OR( NOT(OrderProcessedforFSD__c), AND( OrderProcessedforFSD__c ,  OSM_SW_Is_FSD_refund_Call_Done__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is FSD Done Or Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_FSD_refund_Call_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FSD refund Call Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_IAM_Call_Done_Or_Not_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IAM Call Done Or Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_InterCompany_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is InterCompany Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Is_third_Party_BMS_Payment__c</fullName>
        <formula>ccrz__OriginatedCart__r.OSM_SW_Is_third_Party_BMS_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is third Party BMS Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_No_Revoke_Item_status__c</fullName>
        <label>No Revoke Item status</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.Revocation_Status__c</field>
            <operation>equals</operation>
            <value>Revoke Initiated, Revoked</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_No_of_Revoked_OrderItem__c</fullName>
        <label>No of Revoked OrderItem</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.IsRevokeLicenseSucess__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Order_Item_Count__c</fullName>
        <label>Order Item Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_Included_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Purchase_By__c</fullName>
        <formula>IF( CreatedBy.ContactId != null,  CreatedBy.Contact.FirstName+&apos; &apos;+CreatedBy.Contact.LastName ,  CreatedBy.FirstName+&apos; &apos;+CreatedBy.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Refund_Order_Source_Type__c</fullName>
        <label>Refund Order Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OESD</fullName>
                </value>
                <value>
                    <fullName>OECM</fullName>
                </value>
                <value>
                    <fullName>OSM</fullName>
                </value>
                <value>
                    <fullName>OSMCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSM_SW_Renew_Order_Item_Count__c</fullName>
        <label>Renew Order Item Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.isRenew__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_Included_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Should_mail_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should mail Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_isBoltJournalEntryDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBoltJournalEntryDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderConfirmationMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderConfirmationMailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderItemCancellationMailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderItemCancellationMailSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderProcessedforFSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Processed for FSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Billing_Address__c</fullName>
        <formula>ccrz__BillTo__r.ccrz__AddressFirstline__c  +&apos;, &apos;+  ccrz__BillTo__r.ccrz__City__c  +&apos;, &apos;+ ccrz__BillTo__r.ccrz__State__c  +&apos; &apos;+  ccrz__BillTo__r.ccrz__PostalCode__c  +&apos; &apos;+  ccrz__BillTo__r.ccrz__Country__c</formula>
        <label>Order Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Cancelled_By_CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the user who cancelled the Order.It could be Support Admin,Sales Admin etc</description>
        <label>Cancelled By(CSR)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Shipping_Address__c</fullName>
        <formula>ccrz__ShipTo__r.ccrz__AddressFirstline__c +&apos;, &apos;+ (IF(ISBLANK(ccrz__ShipTo__r.ccrz__AddressSecondline__c), &apos;&apos;, ccrz__ShipTo__r.ccrz__AddressSecondline__c+&apos;, &apos;)) + ccrz__ShipTo__r.ccrz__City__c +&apos;, &apos;+ ccrz__ShipTo__r.ccrz__State__c +&apos; &apos;+ ccrz__ShipTo__r.ccrz__PostalCode__c +&apos; &apos;+ ccrz__ShipTo__r.ccrz__Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Source_Type__c</fullName>
        <label>Order Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OESD</fullName>
                </value>
                <value>
                    <fullName>OECM</fullName>
                    <default>true</default>
                    <label>OECM</label>
                </value>
                <value>
                    <fullName>OSM</fullName>
                </value>
                <value>
                    <fullName>OSMCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Order_Subtotal__c</fullName>
        <label>Original Order Subtotal</label>
        <summarizedField>ccrz__E_OrderItem__c.Original_Price_without_Discount__c</summarizedField>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to map intercompany cloned order to its original order record.</description>
        <label>Original Sales Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Orders (Original Sales Order)</relationshipLabel>
        <relationshipName>CC_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partial_Cancellation__c</fullName>
        <label>Partial Cancellation</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.ccrz__OrderItemStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.ccrz__OrderLineType__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partial_Order_Cancellation_Count__c</fullName>
        <label>Partial Order Cancellation Count</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.ccrz__OrderItemStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OSM_SW_Is_Included_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Purchased_By_Followed_Text__c</fullName>
        <formula>IF( Purchased_By_User_Type__c =  $Label.OSM_Support_Admin_UserType , 
   &apos;Cummins Care&apos;,
   IF(Purchased_By_User_Type__c =  $Label.OSM_Sales_Admin_UserType  || 
      Purchased_By_User_Type__c =  $Label.OSM_Sales_UserType,
     &apos;Account Executive&apos;,  
   IF(Purchased_By_User_Type__c =  $Label.OSM_Distributor_Admin_UserType,  Distributor_HQ_District__c , &apos;&apos;)))</formula>
        <label>Purchased By Followed Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_By_User_Type__c</fullName>
        <label>Purchased By User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Created_Time_Minus_58__c</fullName>
        <formula>CreatedDate -58 * 0.00069</formula>
        <label>Record Created Time Minus 58</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Refund_Amount_Cancelled_Product__c</fullName>
        <label>Refund Amount Cancelled Product</label>
        <summarizedField>ccrz__E_OrderItem__c.ccrz__ItemTotal__c</summarizedField>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.ccrz__OrderItemStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Refund_status__c</fullName>
        <label>Refund status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Refunded</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Pending Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revoked_OR_Reissued_By__c</fullName>
        <label>Revoked OR Reissued By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revoked_OR_Reissued_Product_Name__c</fullName>
        <label>Revoked OR Reissued Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rvoked_OR_Reissued_User_Email__c</fullName>
        <label>Revoked OR Reissued User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SSOEM_Price_Show_Hide__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SSOEM Price Show/Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendOrderDetailMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendOrderDetailMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_Branch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field is updating from OSM Account Permission Matrix</description>
        <label>Send Email to Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_SSOEM_Customer_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Branch Customer Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Should_Show_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Price To SSOEM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Successful_Activation_Keys__c</fullName>
        <label>Successful Activation Keys</label>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OMS_Activation_Key__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_OrderItem__c.OMS_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>